<resources>
    <string name="app_name">Movie Finder</string>
    <string name="button_title">Search</string>
    <string name="movie_not_found">Movie not found. Try another keyword</string>
    <string name="developer_name">developed by: Eka Darmaputra</string>

    <string name="title">Title</string>
    <string name="example_title">Wreck-It Ralph</string>
    <string name="released">Released</string>
    <string name="example_release">02 Nov 2012</string>
    <string name="runtime">Runtime</string>
    <string name="example_runtime">101 min</string>
    <string name="director">Director</string>
    <string name="example_director">Rich Moore</string>
    <string name="Genre">Category</string>
    <string name="example_genre">Animation, Adventure, Comedy</string>
    <string name="Writer">Writer(s)</string>
    <string name="example_writer">Rich Moore (story), Phil Johnston (story), Jim Reardon (story), Phil Johnston (screenplay), Jennifer Lee (screenplay), John C. Reilly (additional story material)</string>
    <string name="actors">Actors</string>
    <string name="example_actors">John C. Reilly, Sarah Silverman, Jack McBrayer, Jane Lynch</string>
    <string name="plot">Storyline</string>
    <string name="example_full_plot">"Wreck-It Ralph longs to be as beloved as his game's perfect Good Guy, Fix-It Felix. Problem is, nobody loves a Bad Guy. But they do love heroes... so when a modern, first-person shooter game arrives featuring tough-as-nails Sergeant Calhoun, Ralph sees it as his ticket to heroism and happiness. He sneaks into the game with a simple plan -- win a medal -- but soon wrecks everything, and accidentally unleashes a deadly enemy that threatens every game in the arcade. Ralph's only hope? Vanellope von Schweetz, a young troublemaking \"glitch\" from a candy-coated cart racing game who might just be the one to teach Ralph what it means to be a Good Guy. But will he realize he is good enough to become a hero before it's \"Game Over\" for the entire arcade?"</string>
</resources>
