<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/main_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:transitionName="poster"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginS">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="14dp"
                    android:layout_marginRight="@dimen/marginL"
                    android:fontFamily="sans-serif-medium"
                    />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/title"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginS">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/released"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginRight="@dimen/marginL"
                    />

                <TextView
                    android:id="@+id/txtRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/example_release"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginS">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginRight="@dimen/marginL"
                    />

                <TextView
                    android:id="@+id/txtRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/example_runtime"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginS">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginRight="@dimen/marginL"
                    />

                <TextView
                    android:id="@+id/txtDirector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/example_director"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginS">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Genre"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginRight="@dimen/marginL"
                    />

                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/example_genre"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginS">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Writer"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginRight="@dimen/marginL"
                    />

                <TextView
                    android:id="@+id/txtWriter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/example_writer"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginS">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actors"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginRight="@dimen/marginL"
                    />

                <TextView
                    android:id="@+id/txtActors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/example_actors"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plot"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginRight="@dimen/marginL"
                    />

                <TextView
                    android:id="@+id/txtPlot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/example_full_plot"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>